--- a/Frontend/wqi-frontend/src/App.css
+++ b/Frontend/wqi-frontend/src/App.css
@@ -174,6 +174,10 @@ a:active {
   justify-content: center;
   align-items: center;
 }
+.comparehead{
+  text-align: center;
+  margin-bottom: 5%;
+}
 .card {
   height: 100%;
   overflow: hidden;
