--- a/Frontend/wqi-frontend/src/App.css
+++ b/Frontend/wqi-frontend/src/App.css
@@ -97,27 +97,28 @@ a:active {
   justify-content: space-around;
   /* border-bottom: 3px black solid; */
 }
-.bruhRow-half {
-  text-align: center;
-  height: 50vh;
-  align-items: center;
-  justify-content: space-around;
-}
-.bruhRow-half:nth-child(even) {
-  flex-direction: row-reverse;
-}
-@media (max-width: 768px) {
-  .bruhRow-half {
-    flex-direction: column;
-  }
-}
+
 .bruhRow:nth-child(2) {
   flex-direction: row-reverse;
+}
+
+.home-img-container {
+  /* width: 50%; */
+  padding: 0;
+  /* height: 100%; */
+}
+.home-img-container img {
+  width: 100%;
+}
+.home-text-col {
+  /* width: 50%; */
+  padding: 0;
 }
 .text-container {
   background-color: #b3cbff80;
   padding: 3em;
   border-radius: 50px 20px 50px 20px;
+  width: 100%;
 }
 .text-container > h1 {
   font-size: 4em;
@@ -227,7 +228,7 @@ footer {
   height: 10vh;
   background-color: #1e3163;
   display: grid;
-  grid-template-columns: repeat(3, 1fr) ;
+  grid-template-columns: repeat(3, 1fr);
   place-items: center;
   text-align: center;
   color: white;
@@ -312,4 +313,16 @@ footer p {
 }
 .aboutus-container .col:nth-child(4) {
   background-color: rgba(163, 255, 145, 0.5);
+}
+
+.grievance {
+  margin-top: 3%;
+  margin-bottom: 5.4%;
+  width: 50%;
+  background-color: #cddeff;
+  padding: 5%;
+}
+
+.detgrie {
+  margin-top: 4%;
 }
