--- a/Frontend/wqi-frontend/src/App.css
+++ b/Frontend/wqi-frontend/src/App.css
@@ -281,6 +281,27 @@ footer p {
     width: 100%;
     height: 50vh;
   }
+
+  .bruhRow {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .text-container h1 {
+    font-size: 24px;
+  }
+
+  .blu-btn {
+    margin: 0;
+  }
+
+  footer {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 0.5em;
+    gap: 1em;
+  }
 }
 
 /* About page  */
