--- a/Frontend/wqi-frontend/src/App.css
+++ b/Frontend/wqi-frontend/src/App.css
@@ -337,13 +337,23 @@ footer p {
 }
 
 .grievance {
-  margin-top: 3%;
-  margin-bottom: 5.4%;
   width: 50%;
   background-color: #cddeff;
   padding: 5%;
+  height: calc(100vh - 170px);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
 }
 
 .detgrie {
   margin-top: 4%;
+}
+
+@media (max-width: 900px) {
+  .grievance {
+    width: 90%;
+    height: calc(100vh - 92px - 172px);
+  }
 }
