--- a/Frontend/wqi-frontend/src/App.css
+++ b/Frontend/wqi-frontend/src/App.css
@@ -204,7 +204,9 @@ a:active {
   color: white !important;
 }
 .map-container {
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
+  padding: 1rem 0;
   text-align: center;
 }
 .map-placeholder {
@@ -217,6 +219,15 @@ a:active {
   margin: auto;
   width: 66vw;
   height: 66vh;
+}
+.heatmap-loader {
+  background-color: white;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
 }
 .info-container {
   background-color: rgb(78, 78, 78);
