--- a/Frontend/wqi-frontend/src/App.css
+++ b/Frontend/wqi-frontend/src/App.css
@@ -220,6 +220,62 @@ a:active {
   width: 66vw;
   height: 66vh;
 }
+.comparehead{
+  margin: 1rem 1rem;
+  justify-content: space-around;
+  align-items: center;
+}
+.comparehead h1{
+  text-align: center;
+  background-color: #1e3163;
+  padding: 1rem;
+  color: rgb(183, 225, 240);
+  border-radius: 20px;
+  width: 500px;
+}
+
+.Tabs{
+  width: 80%;
+  height: auto;
+  min-height: 30px;
+  margin: 3.5rem auto 1.5rem;
+  border-radius: 2rem;
+  align-items: center;
+ justify-content: center;
+}
+ul.nav {
+  width: 60%;
+  margin: 0 auto 2rem;
+  display: relative;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid #39A2DB;
+  border-radius: 2rem;
+  padding-left: 0px;
+  background: #fff;
+}
+ul.nav li {
+  width: 50%;
+  padding: 1rem;
+  list-style: none;
+  text-align: center;
+  cursor: pointer;
+  transition: all 0.7s;
+  border-bottom-left-radius: 2rem;
+  border-top-left-radius: 2rem;
+}
+ul.nav li:nth-child(2) {
+  border-radius: 0;
+  border-bottom-right-radius: 2rem;
+  border-top-right-radius: 2rem;
+}
+ul.nav li:hover {
+  background: rgba(50, 224, 196, 0.15);
+}
+ul.nav li.active {
+  background: #39A2DB;
+  color: white;
+}
 .linechart-loader {
   height: 600px;
   display: grid;
