--- a/Backend/chart/chartjs/templates/chartjs/modelriver.html
+++ b/Backend/chart/chartjs/templates/chartjs/modelriver.html
@@ -32,10 +32,10 @@
         url: endpoint,
         success: function (data) {
           drawmodelpredict(data, "modelpredict");
-          console.log("drawing");
+          //console.log("drawing");
         },
         error: function (error_data) {
-          console.log(error_data);
+          //console.log(error_data);
         },
       });
 
