--- a/Frontend/wqi-frontend/src/App.css
+++ b/Frontend/wqi-frontend/src/App.css
@@ -95,6 +95,8 @@ a:active {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  flex-wrap: nowrap;
+  gap: 1rem;
   /* border-bottom: 3px black solid; */
 }
 
@@ -103,9 +105,12 @@ a:active {
 }
 
 .home-img-container {
-  /* width: 50%; */
+  width: 50%;
+  box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.548);
   padding: 0;
   /* height: 100%; */
+  border-radius: 20px;
+  overflow: hidden;
 }
 .home-img-container img {
   width: 100%;
@@ -220,12 +225,12 @@ a:active {
   width: 66vw;
   height: 66vh;
 }
-.comparehead{
+.comparehead {
   margin: 1rem 1rem;
   justify-content: space-around;
   align-items: center;
 }
-.comparehead h1{
+.comparehead h1 {
   text-align: center;
   background-color: #1e3163;
   padding: 1rem;
@@ -234,14 +239,14 @@ a:active {
   width: 500px;
 }
 
-.Tabs{
+.Tabs {
   width: 80%;
   height: auto;
   min-height: 30px;
   margin: 3.5rem auto 1.5rem;
   border-radius: 2rem;
   align-items: center;
- justify-content: center;
+  justify-content: center;
 }
 ul.nav {
   width: 60%;
@@ -249,7 +254,7 @@ ul.nav {
   display: relative;
   align-items: center;
   justify-content: space-between;
-  border: 1px solid #39A2DB;
+  border: 1px solid #39a2db;
   border-radius: 2rem;
   padding-left: 0px;
   background: #fff;
@@ -273,7 +278,7 @@ ul.nav li:hover {
   background: rgba(50, 224, 196, 0.15);
 }
 ul.nav li.active {
-  background: #39A2DB;
+  background: #39a2db;
   color: white;
 }
 .linechart-loader {
@@ -452,6 +457,7 @@ footer p {
   align-items: center;
   margin: 0.5rem;
   border-radius: 10px;
+  box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.651);
 }
 .about-text-container p {
   width: 66%;
@@ -461,6 +467,9 @@ footer p {
 }
 .about-dev-description * {
   font-family: "Montserrat" !important;
+}
+.about-dev-description {
+  box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.637);
 }
 .about-dev-description a {
   color: black;
